--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "element-ui": "^2.6.1",
     "fastclick": "^1.0.6",
     "jquery": "^3.3.1",
+    "jsonp": "^0.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-simple-tree": "^2.3.2",
     "vue-upload-component": "^2.8.19",
-    "vuex": "^2.1.1",
+    "vuex": "^2.5.0",
     "vuex-i18n": "^1.3.1",
     "vux": "^2.2.0",
     "vux-uploader": "^0.1.9"
