--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "element-tree-grid": "^0.1.3",
     "element-ui": "^2.6.1",
     "fastclick": "^1.0.6",
@@ -38,6 +39,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "es6-promise": "^4.2.8",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
